# snippet_highlight

./: README.md  pyproject.toml  setup.py
snippet_highlight/: snippet_highlight.py
tests/: snippet_highlight_tests.py  test_document.txt  test_snippet_highlight.py
